--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>ohmyfood</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-   <link rel="stylesheet" type="text/css" href="public/style.css">
+   
    <link rel="icon" type="image/png" sizes="16x16"  href="public/images/logo/favicons/favicon-16x16.png">
    <meta name="msapplication-TileColor" content="#ffffff">
    <meta name="theme-color" content="#ffffff">
@@ -12,5 +12,11 @@
    <meta name="theme-color" content="#ffffff">
    <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
    <script src="https://kit.fontawesome.com/029cb7604a.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="public/css/style.css">
 </head>
+<body>
+  <header class="header">
+   <a href="index.html"><img id="logo" src="public/images/logo/ohmyfood@2x.svg" alt="logo_oh_my_food" /></a>
+  </header> 
+</body>
 </html>
