--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
    <title>ohmyfood</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-   
-   <link rel="icon" type="image/png" sizes="16x16"  href="public/images/logo/favicons/favicon-16x16.png">
+
+   <link rel="icon" type="image/png" sizes="16x16" href="public/images/logo/favicons/favicon-16x16.png">
    <meta name="msapplication-TileColor" content="#ffffff">
    <meta name="theme-color" content="#ffffff">
    <meta name="msapplication-TileColor" content="#da532c">
    <meta name="theme-color" content="#ffffff">
    <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/029cb7604a.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="public/css/style.css">
 </head>
+
 <body>
-  <header class="header">
-   <a class ="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg" alt="logo_oh_my_food" /></a>
-   <form class="form" method="post" action="traitement.php">
-    <span class="form__position">
-       <i class="fa-solid fa-location-dot fa-xl"></i>
-    </span>
-    <input class="form__rechercher" type="search" name="rechercher" id="rechercher" placeholder="Paris, Belleville" />
- </form>
-  </header> 
+   <header class="header">
+      <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
+            alt="logo_oh_my_food" /></a>
+      <form class="form" method="post" action="traitement.php">
+         <span class="form__position">
+            <i class="fa-solid fa-location-dot fa-xl"></i>
+         </span>
+         <input class="form__rechercher" type="search" name="rechercher" id="rechercher"
+            placeholder="Paris, Belleville" />
+      </form>
+   </header>
+<main class="container">
+   <section class="slogan">
+      <h1>Réservez le menu qui vous convient</h1>
+      <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+      <button class="btn">
+         Explorer nos restaurants
+      </button>
+   </section>
+</main>
 </body>
+
 </html>
