--- a/index.html
+++ b/index.html
@@ -31,15 +31,35 @@
             placeholder="Paris, Belleville" />
       </form>
    </header>
-<main class="container">
-   <section class="slogan">
-      <h1>Réservez le menu qui vous convient</h1>
-      <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-      <button class="btn">
-         Explorer nos restaurants
-      </button>
-   </section>
-</main>
+   <main class="container">
+      <section class="slogan">
+         <h1>Réservez le menu qui vous convient</h1>
+         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+         <button class="btn">
+            Explorer nos restaurants
+         </button>
+      </section>
+      <section class="fonctionnement">
+         <h2>Fonctionnement</h2>
+
+         <button class="btn_fctnt">
+            <span class="btn_fctnt__numero">1</span>
+            <i class="fas fa-mobile-alt"></i>
+            Choisissez un restaurant
+         </button>
+
+         <button class="btn_fctnt">
+            <span class="btn_fctnt__numero">2</span>
+            <i class="fas fa-list-ul operation__steps--icon"></i>
+            Composez votre menu
+         </button>
+         <button class="btn_fctnt">
+            <span class="btn_fctnt__numero">3</span>
+            <i class="fas fa-store operation__steps--icon"></i>
+            Dégustez au restaurant
+         </button>
+      </section>
+   </main>
 </body>
 
 </html>
