--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!--  header -->
    <header class="header">
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>
@@ -32,6 +33,7 @@
       </form>
    </header>
    <main class="container">
+      <!-- Section slogan -->
       <section class="slogan">
          <h1>Réservez le menu qui vous convient</h1>
          <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
@@ -39,15 +41,15 @@
             Explorer nos restaurants
          </button>
       </section>
-      <section class="fonctionnement">
+<!-- section explication fonctionnement -->
+      <section class="fctnt">
          <h2>Fonctionnement</h2>
-
+         <div class="fctnt__ens_btns">
          <button class="btn_fctnt">
             <span class="btn_fctnt__numero">1</span>
             <i class="fas fa-mobile-alt"></i>
             Choisissez un restaurant
          </button>
-
          <button class="btn_fctnt">
             <span class="btn_fctnt__numero">2</span>
             <i class="fas fa-list-ul operation__steps--icon"></i>
@@ -58,6 +60,7 @@
             <i class="fas fa-store operation__steps--icon"></i>
             Dégustez au restaurant
          </button>
+      </div>
       </section>
    </main>
 </body>
