bloc resto 1ere carte

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <!--  header -->
+   <!--  header -->
    <header class="header">
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>
@@ -41,26 +41,40 @@
             Explorer nos restaurants
          </button>
       </section>
-<!-- section explication fonctionnement -->
+      <!-- section explication fonctionnement -->
       <section class="fctnt">
          <h2>Fonctionnement</h2>
          <div class="fctnt__ens_btns">
-         <button class="btn_fctnt">
-            <span class="btn_fctnt__numero">1</span>
-            <i class="fas fa-mobile-alt"></i>
-            Choisissez un restaurant
-         </button>
-         <button class="btn_fctnt">
-            <span class="btn_fctnt__numero">2</span>
-            <i class="fas fa-list-ul operation__steps--icon"></i>
-            Composez votre menu
-         </button>
-         <button class="btn_fctnt">
-            <span class="btn_fctnt__numero">3</span>
-            <i class="fas fa-store operation__steps--icon"></i>
-            Dégustez au restaurant
-         </button>
-      </div>
+            <button class="btn_fctnt">
+               <span class="btn_fctnt__numero">1</span>
+               <i class="fas fa-mobile-alt"></i>
+               Choisissez un restaurant
+            </button>
+            <button class="btn_fctnt">
+               <span class="btn_fctnt__numero">2</span>
+               <i class="fas fa-list-ul operation__steps--icon"></i>
+               Composez votre menu
+            </button>
+            <button class="btn_fctnt">
+               <span class="btn_fctnt__numero">3</span>
+               <i class="fas fa-store operation__steps--icon"></i>
+               Dégustez au restaurant
+            </button>
+         </div>
+      </section>
+      <section class="resto">
+         <h2>Restaurants</h2>
+         <div class="liste_resto">
+            <!-- Palette des gouts -->
+            <a class="card-resto" href="#">
+               <div class="card-resto__card-image">
+               <img class="card-resto--object-fit-norm" src="public/images/restaurants/palette_du_gout.jpg" alt="palette_du_gout">
+               </div>
+               <h4>La palette du goût</h4>
+               Ménilmontant
+            </a>
+
+         </div>
       </section>
    </main>
 </body>
