bloc resto 1ere carte faite

--- a/index.html
+++ b/index.html
@@ -67,18 +67,20 @@
          <div class="liste_resto">
             <!-- Palette des gouts -->
             <a class="card-resto" href="#">
-               <div class="new_restaurant">Nouveau</div>
+               <div class="card-resto__new"><h4>Nouveau</h4></div>
                <div class="card-image">
+             
                   <img class="object-fit-norm" src="public/images/restaurants/palette_du_gout.jpg"
                      alt="palette_du_gout">
+                    
                </div>
-               <div class="bloc-texte">
-               <div class="texte">
-                  <h4>La palette du goût </h4>
-                  Ménilmontant
+               <div class="bloc-nom">
+                  <div class="bloc-nom__texte">
+                     <h4>La palette du goût </h4>
+                     Ménilmontant
+                  </div>
+                  <i class="far fa-heart fa-xl"></i>
                </div>
-               <i class="fill far fa-heart fa-xl"></i>
-            </div>
 
             </a>
 
