bloc resto ajout des cartes

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </button>
          </div>
       </section>
+     <!--  Liste restaurants -->
       <section class="resto">
          <h2>Restaurants</h2>
          <div class="liste_resto">
@@ -69,10 +70,8 @@
             <a class="card-resto" href="#">
                <div class="card-resto__new"><h4>Nouveau</h4></div>
                <div class="card-image">
-             
                   <img class="object-fit-norm" src="public/images/restaurants/palette_du_gout.jpg"
-                     alt="palette_du_gout">
-                    
+                     alt="palette_du_gout">     
                </div>
                <div class="bloc-nom">
                   <div class="bloc-nom__texte">
@@ -81,9 +80,50 @@
                   </div>
                   <i class="far fa-heart fa-xl"></i>
                </div>
-
             </a>
-
+            <!-- La note enchantée -->
+            <a class="card-resto" href="#">
+               <div class="card-resto__new"><h4>Nouveau</h4></div>
+               <div class="card-image">
+                  <img class="object-fit-norm" src="public/images/restaurants/note_enchantee.jpg"
+                     alt="la_note_enchantee">     
+               </div>
+               <div class="bloc-nom">
+                  <div class="bloc-nom__texte">
+                     <h4>La note enchantée </h4>
+                     Charonne
+                  </div>
+                  <i class="far fa-heart fa-xl"></i>
+               </div>
+            </a>
+            <!-- à la française-->
+            <a class="card-resto" href="#">
+               <div class="card-image">
+                  <img class="object-fit-norm" src="public/images/restaurants/a_la_francaise.jpg"
+                     alt="a_la_francaise">     
+               </div>
+               <div class="bloc-nom">
+                  <div class="bloc-nom__texte">
+                     <h4>À la française </h4>
+                     Cité Rouge
+                  </div>
+                  <i class="far fa-heart fa-xl"></i>
+               </div>
+            </a>
+             <!-- Le délice des sens-->
+             <a class="card-resto" href="#">
+               <div class="card-image">
+                  <img class="object-fit-norm" src="public/images/restaurants/delice_des_sens.jpg"
+                     alt="delice_des_sens">     
+               </div>
+               <div class="bloc-nom">
+                  <div class="bloc-nom__texte">
+                     <h4>Le délice des sens </h4>
+                     Folie-Méricourt
+                  </div>
+                  <i class="far fa-heart fa-xl"></i>
+               </div>
+            </a>
          </div>
       </section>
    </main>
