--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
          </div>
       </section>
    </main>
+   <footer>
+      <h2>ohmyfood</h2>
+      <nav>
+         <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+         </ul>
+      </nav>
+   </footer>
 </body>
 
 </html>
