creation pages - accueil sass

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:100,900i" rel="stylesheet">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/029cb7604a.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="public/css/style.css">
@@ -24,6 +25,10 @@
    <header class="header">
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>
+     
+   </header>
+   <main class="container">
+        <!-- formulaire -->
       <form class="form" method="post" action="traitement.php">
          <span class="form__position">
             <i class="fa-solid fa-location-dot fa-xl"></i>
@@ -31,8 +36,6 @@
          <input class="form__rechercher" type="search" name="rechercher" id="rechercher"
             placeholder="Paris, Belleville" />
       </form>
-   </header>
-   <main class="container">
       <!-- Section slogan -->
       <section class="slogan">
          <h1>Réservez le menu qui vous convient</h1>
@@ -67,7 +70,7 @@
          <h2>Restaurants</h2>
          <div class="liste_resto">
             <!-- Palette des gouts -->
-            <a class="card-resto" href="#">
+            <a class="card-resto" href="palettedugout.html">
                <div class="card-resto__new"><h4>Nouveau</h4></div>
                <div class="card-image">
                   <img class="object-fit-norm" src="public/images/restaurants/palette_du_gout.jpg"
