creation page menu palette

--- a/palettedugout.html
+++ b/palettedugout.html
@@ -23,11 +23,56 @@
 <body>
    <!--  header -->
    <header class="header">
+    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>    
    </header>
-   <main class="container">
+   <main class="menu">
+   <section class="menu__entete">
+        <img src="public/images/restaurants/palette_du_gout.jpg"
+              alt="palette_du_gout">     
+        <div class="nom_resto">
+           <div class="bloc-nom__texte">
+              <h1>La palette du goût </h1>
+           </div>
+           <i class="far fa-heart fa-xl"></i>
+        </div>
+    </section>
+    <section class="menu__description">
+    <section class="menu__description--entree">
+        <h3>Entrées</h3>
+        <div class="bloc_plat">
+            <h4>Fricassée d'escargot</h4>
+            <div class="bloc_plat--details">
+                Au piment d'Espelette
+                <h4>25€</h4></div>
+        </div>
+        <div class="bloc_plat">
+            <h4>Foie gras de canard mi-cuit</h4>
+            <div class="bloc_plat--details">
+                Et ses copeaux de truffe noire
+                <h4>35€</h4></div>
+        </div>
+        <div class="bloc_plat">
+            <h4>Oeuf au plat</h4>
+            <div class="bloc_plat--details">
+                Assaisonné à la truffe sur lit de caviar
+                <h4>20€</h4></div>
+        </div>
+
+
+
+
+
+
+
+
+    </section>
+    <section class="plats"></section>
+    <section class="desserts"></section>
+    </section>
    </main>
+
    <footer>
     <h2>ohmyfood</h2>
     <nav>
