--- a/palettedugout.html
+++ b/palettedugout.html
@@ -23,7 +23,7 @@
 <body>
    <!--  header -->
    <header class="header">
-    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+    <a href="index.html"><i class="fas fa-arrow-left fa-xl"></i></a>
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
             alt="logo_oh_my_food" /></a>    
    </header>
@@ -39,37 +39,78 @@
         </div>
     </section>
     <section class="menu__description">
-    <section class="menu__description--entree">
-        <h3>Entrées</h3>
-        <div class="bloc_plat">
-            <h4>Fricassée d'escargot</h4>
-            <div class="bloc_plat--details">
-                Au piment d'Espelette
-                <h4>25€</h4></div>
-        </div>
-        <div class="bloc_plat">
-            <h4>Foie gras de canard mi-cuit</h4>
-            <div class="bloc_plat--details">
-                Et ses copeaux de truffe noire
-                <h4>35€</h4></div>
-        </div>
-        <div class="bloc_plat">
-            <h4>Oeuf au plat</h4>
-            <div class="bloc_plat--details">
-                Assaisonné à la truffe sur lit de caviar
-                <h4>20€</h4></div>
-        </div>
-
-
-
-
-
-
-
-
-    </section>
-    <section class="plats"></section>
-    <section class="desserts"></section>
+       <!-- Entrées -->
+            <section class="menu__description--titre">
+               <h3>Entrées</h3>
+               <div class="bloc_plat">
+                     <h4>Fricassée d'escargot</h4>
+                     <div class="bloc_plat--details">
+                        <p>Au piment d'Espelette</p>
+                        <h4>25€</h4></div>
+               </div>
+               <div class="bloc_plat">
+                     <h4>Foie gras de canard mi-cuit</h4>
+                     <div class="bloc_plat--details">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <h4>35€</h4></div>
+               </div>
+               <div class="bloc_plat">
+                     <h4>Oeuf au plat</h4>
+                     <div class="bloc_plat--details">
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <h4>20€</h4></div>
+               </div>
+            </section>
+            <!-- Plats -->
+            <section class="menu__description--titre">
+               <h3>Plats</h3>
+               <div class="bloc_plat">
+                     <h4>Filet de boeuf aux herbes</h4>
+                     <div class="bloc_plat--details">
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <h4>40€</h4></div>
+               </div>
+               <div class="bloc_plat">
+                     <h4>Parmentier de queue de boeuf</h4>
+                     <div class="bloc_plat--details">
+                        <p>À la truffe noire sur sa purée de panais</p>
+                        <h4>35€</h4></div>
+               </div>
+               <div class="bloc_plat">
+                     <h4>Filet de turbot</h4>
+                     <div class="bloc_plat--details">
+                        <p>Aux agrumes</p>
+                        <h4>44€</h4></div>
+               </div>
+            </section>
+            <!-- desserts -->
+            <section class="menu__description" >
+               <h3 class="menu__description--titre">Desserts</h3>
+               <div class="menu__description--bloc_plat">
+                     <h4>Paris-Brest</h4>
+                     <div class="bloc_plat--details">
+                        <p>Revisité</p>
+                        <h4>18€</h4>
+                     </div>
+               </div>
+               <div class="menu__description--bloc_plat">
+                     <h4>Macaron au chocolat d'exception </h4>
+                     <div class="bloc_plat--details">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <h4>22€</h4></div>
+               </div>
+               <div class="menu__description--bloc_plat">
+                     <h4>Mousse au chocolat</h4>
+                     <div class="menu__description--bloc_plat--details">
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <h4>23€</h4></div>
+               </div>
+            </section>
+            <section class="slogan">
+               <button class="btn">
+                  Commander
+               </button>
+            </section>
     </section>
    </main>
 
