creation de toutes les pages

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                </div>
             </a>
             <!-- La note enchantée -->
-            <a class="card-resto" href="#">
+            <a class="card-resto" href="lanoteenchantee.html">
                <div class="card-resto__new"><h4>Nouveau</h4></div>
                <div class="card-image">
                   <img class="object-fit-norm" src="public/images/restaurants/note_enchantee.jpg"
@@ -100,7 +100,7 @@
                </div>
             </a>
             <!-- à la française-->
-            <a class="card-resto" href="#">
+            <a class="card-resto" href="alafrancaise.html">
                <div class="card-image">
                   <img class="object-fit-norm" src="public/images/restaurants/a_la_francaise.jpg"
                      alt="a_la_francaise">     
@@ -114,7 +114,7 @@
                </div>
             </a>
              <!-- Le délice des sens-->
-             <a class="card-resto" href="#">
+             <a class="card-resto" href="ledelicedessens.html">
                <div class="card-image">
                   <img class="object-fit-norm" src="public/images/restaurants/delice_des_sens.jpg"
                      alt="delice_des_sens">     
