--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-   <title>ohmyfood</title>
+   <title>ohmyfood, des restaurants d'exception !</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+   
    <!--  header -->
    <header class="header">
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
@@ -40,7 +41,7 @@
       <section class="slogan">
          <h1>Réservez le menu qui vous convient</h1>
          <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-         <button class="btn">
+         <button class="btn cursor">
             Explorer nos restaurants
          </button>
       </section>
@@ -48,17 +49,17 @@
       <section class="fctnt">
          <h2>Fonctionnement</h2>
          <div class="fctnt__ens_btns">
-            <button class="btn_fctnt">
+            <button class="btn_fctnt cursor">
                <span class="btn_fctnt__numero">1</span>
                <i class="fas fa-mobile-alt"></i>
                Choisissez un restaurant
             </button>
-            <button class="btn_fctnt">
+            <button class="btn_fctnt cursor">
                <span class="btn_fctnt__numero">2</span>
                <i class="fas fa-list-ul operation__steps--icon"></i>
                Composez votre menu
             </button>
-            <button class="btn_fctnt">
+            <button class="btn_fctnt cursor">
                <span class="btn_fctnt__numero">3</span>
                <i class="fas fa-store operation__steps--icon"></i>
                Dégustez au restaurant
