responsive desktop menu

--- a/palettedugout.html
+++ b/palettedugout.html
@@ -38,7 +38,7 @@
            <i class="far fa-heart fa-xl"></i>
         </div>
     </section>
-    <section class="menu__description">
+    <section class="menu__description--plat">
        <!-- Entrées -->
             <section class="menu__description">
                <h3 class="menu__description--titre">Entrées</h3>
