--- a/palettedugout.html
+++ b/palettedugout.html
@@ -23,109 +23,116 @@
 <body>
    <!--  header -->
    <header class="header">
-    <a href="index.html"><i class="fas fa-arrow-left fa-xl"></i></a>
+      <a href="index.html"><i class="fas fa-arrow-left fa-xl"></i></a>
       <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
-            alt="logo_oh_my_food" /></a>    
+            alt="logo_oh_my_food" /></a>
    </header>
    <main class="menu">
-   <section class="menu__entete">
-        <img src="public/images/restaurants/palette_du_gout.jpg"
-              alt="palette_du_gout">     
-        <div class="nom_resto">
-           <div class="bloc-nom__texte">
-              <h1>La palette du goût </h1>
-           </div>
-           <i class="far fa-heart fa-xl"></i>
-        </div>
-    </section>
-    <section class="menu__description--plat">
-       <!-- Entrées -->
-            <section class="menu__description">
-               <h3 class="menu__description--titre">Entrées</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Fricassée d'escargot</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Au piment d'Espelette</p>
-                        <h4>25€</h4></div>
+      <section class="menu__entete">
+         <img src="public/images/restaurants/palette_du_gout.jpg" alt="palette_du_gout">
+         <div class="nom_resto">
+            <div class="bloc-nom__texte">
+               <h1>La palette du goût </h1>
+            </div>
+            <i class="far fa-heart fa-xl"></i>
+         </div>
+      </section>
+      <section class="menu__description--plat">
+         <!-- Entrées -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Entrées</h3>
+            <div class="menu__description--bloc_plat">
+               <h4>Fricassée d'escargot</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Au piment d'Espelette</p>
+                  <h4>25€</h4>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Foie gras de canard mi-cuit</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Et ses copeaux de truffe noire</p>
-                        <h4>35€</h4></div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <h4>Foie gras de canard mi-cuit</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Et ses copeaux de truffe noire</p>
+                  <h4>35€</h4>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Oeuf au plat</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <h4>20€</h4></div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <h4>Oeuf au plat</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Assaisonné à la truffe sur lit de caviar</p>
+                  <h4>20€</h4>
                </div>
-            </section>
-            <!-- Plats -->
-            <section class="menu__description">
-               <h3 class="menu__description--titre">Plats</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Filet de boeuf aux herbes</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                        <h4>40€</h4></div>
+            </div>
+         </section>
+         <!-- Plats -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Plats</h3>
+            <div class="menu__description--bloc_plat">
+               <h4>Filet de boeuf aux herbes</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <h4>40€</h4>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Parmentier de queue de boeuf</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>À la truffe noire sur sa purée de panais</p>
-                        <h4>35€</h4></div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <h4>Parmentier de queue de boeuf</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>À la truffe noire sur sa purée de panais</p>
+                  <h4>35€</h4>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Filet de turbot</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Aux agrumes</p>
-                        <h4>44€</h4></div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <h4>Filet de turbot</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Aux agrumes</p>
+                  <h4>44€</h4>
                </div>
-            </section>
-            <!-- desserts -->
-            <section class="menu__description" >
-               <h3 class="menu__description--titre">Desserts</h3>
-               <div class="menu__description--bloc_plat">
-                     <h4>Paris-Brest</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Revisité</p>
-                        <h4>18€</h4>
-                     </div>
+            </div>
+         </section>
+         <!-- desserts -->
+         <section class="menu__description">
+            <h3 class="menu__description--titre">Desserts</h3>
+            <div class="menu__description--bloc_plat">
+               <h4>Paris-Brest</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Revisité</p>
+                  <h4>18€</h4>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Macaron au chocolat d'exception </h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Et glace à la vanille de Madagascar</p>
-                        <h4>22€</h4>
-                     </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <h4>Macaron au chocolat d'exception </h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Et glace à la vanille de Madagascar</p>
+                  <h4>22€</h4>
                </div>
-               <div class="menu__description--bloc_plat">
-                     <h4>Mousse au chocolat</h4>
-                     <div class="menu__description--bloc_plat--details">
-                        <p>Au piment d'Espelette et à la truffe noire</p>
-                        <h4>23€</h4>
-                     </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <h4>Mousse au chocolat</h4>
+               <div class="menu__description--bloc_plat--details">
+                  <p>Au piment d'Espelette et à la truffe noire</p>
+                  <h4>23€</h4>
                </div>
-            </section>
-            <section class="slogan">
-               <button class="btn">
-                  Commander
-               </button>
-            </section>
-    </section>
+            </div>
+         </section>
+      </section>
+      <section class="slogan">
+         <button class="btn">
+            Commander
+         </button>
+      </section>
+
    </main>
 
    <footer>
-    <h2>ohmyfood</h2>
-    <nav>
-       <ul>
-          <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-          <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-       </ul>
-    </nav>
- </footer>
+      <h2>ohmyfood</h2>
+      <nav>
+         <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+         </ul>
+      </nav>
+   </footer>
 </body>
+
 </html>
