ajout animation coeur

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                      <h4>À la française </h4>
                      Cité Rouge
                   </div>
-                  <i class="far fa-heart fa-xl"></i>
+                  <i class="far fa-heart fa-xl coeur"></i>
                </div>
             </a>
              <!-- Le délice des sens-->
