--- a/palettedugout.html
+++ b/palettedugout.html
@@ -34,7 +34,7 @@
             <div class="bloc-nom__texte">
                <h1>La palette du goût </h1>
             </div>
-            <i class="far fa-heart fa-xl"></i>
+            <i class="far fa-heart fa-xl coeur"></i>
          </div>
       </section>
       <section class="menu__description--plat">
