ajout animation coeur vs3

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                      <h4>La palette du goût </h4>
                      Ménilmontant
                   </div>
-                  <i class="far fa-heart fa-xl"></i>
+                  <i class="fa-regular fa-heart fa-2x coeur"></i>
                </div>
             </a>
             <!-- La note enchantée -->
@@ -97,7 +97,7 @@
                      <h4>La note enchantée </h4>
                      Charonne
                   </div>
-                  <i class="far fa-heart fa-xl"></i>
+                  <i class="fa-regular fa-heart fa-2x coeur"></i>
                </div>
             </a>
             <!-- à la française-->
@@ -111,7 +111,7 @@
                      <h4>À la française </h4>
                      Cité Rouge
                   </div>
-                  <i class="far fa-heart fa-xl coeur"></i>
+                  <i class="fa-regular fa-heart fa-2x coeur"></i>
                </div>
             </a>
              <!-- Le délice des sens-->
@@ -125,7 +125,7 @@
                      <h4>Le délice des sens </h4>
                      Folie-Méricourt
                   </div>
-                  <i class="far fa-heart fa-xl"></i>
+                  <i class="fa-regular fa-heart fa-2x coeur"></i>
                </div>
             </a>
          </div>
