ajout anim bloc

--- a/index.html
+++ b/index.html
@@ -24,143 +24,145 @@
    <!--  CHARGEMENT LOADER -->
    <section id="loader-container">
       <div class="center">
-      <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div>
-  <div class="wave"></div></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+         <div class="wave"></div>
+      </div>
       LOADING
    </section>
    <section id="container">
-   <!--  header -->
-   <header class="header">
-      <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
-            alt="logo_oh_my_food" /></a>
+      <!--  header -->
+      <header class="header">
+         <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
+               alt="logo_oh_my_food" /></a>
 
-   </header>
-   <main >
-      <!-- formulaire -->
-      <form class="form" method="post" action="traitement.php">
-         <span class="form__position">
-            <i class="fa-solid fa-location-dot fa-xl"></i>
-         </span>
-         <input class="form__rechercher" type="search" name="rechercher" id="rechercher"
-            placeholder="Paris, Belleville" />
-      </form>
-      <!-- Section slogan -->
-      <section class="slogan">
-         <h1>Réservez le menu qui vous convient</h1>
-         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-         <button class="btn cursor">
-            Explorer nos restaurants
-         </button>
-      </section>
-      <!-- section explication fonctionnement -->
-      <section class="fctnt">
-         <h2>Fonctionnement</h2>
-         <div class="fctnt__ens_btns">
-            <button class="btn_fctnt cursor">
-               <span class="btn_fctnt__numero">1</span>
-               <i class="fas fa-mobile-alt"></i>
-               Choisissez un restaurant
+      </header>
+      <main>
+         <!-- formulaire -->
+         <form class="form" method="post" action="traitement.php">
+            <span class="form__position">
+               <i class="fa-solid fa-location-dot fa-xl"></i>
+            </span>
+            <input class="form__rechercher" type="search" name="rechercher" id="rechercher"
+               placeholder="Paris, Belleville" />
+         </form>
+         <!-- Section slogan -->
+         <section class="slogan">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <button class="btn cursor">
+               Explorer nos restaurants
             </button>
-            <button class="btn_fctnt cursor">
-               <span class="btn_fctnt__numero">2</span>
-               <i class="fas fa-list-ul operation__steps--icon"></i>
-               Composez votre menu
-            </button>
-            <button class="btn_fctnt cursor">
-               <span class="btn_fctnt__numero">3</span>
-               <i class="fas fa-store operation__steps--icon"></i>
-               Dégustez au restaurant
-            </button>
-         </div>
-      </section>
-      <!--  Liste restaurants -->
-      <section class="resto">
-         <h2>Restaurants</h2>
-         <div class="liste_resto">
-            <!-- Palette des gouts -->
-            <a class="card-resto" href="palettedugout.html">
-               <div class="card-resto__new">
-                  <h4>Nouveau</h4>
-               </div>
-               <div class="card-image">
-                  <img class="object-fit-norm" src="public/images/restaurants/palette_du_gout.jpg"
-                     alt="palette_du_gout">
-               </div>
-               <div class="bloc-nom">
-                  <div class="bloc-nom__texte">
-                     <h4>La palette du goût </h4>
-                     Ménilmontant
+         </section>
+         <!-- section explication fonctionnement -->
+         <section class="fctnt">
+            <h2>Fonctionnement</h2>
+            <div class="fctnt__ens_btns">
+               <button class="btn_fctnt cursor">
+                  <span class="btn_fctnt__numero">1</span>
+                  <i class="fas fa-mobile-alt"></i>
+                  Choisissez un restaurant
+               </button>
+               <button class="btn_fctnt cursor">
+                  <span class="btn_fctnt__numero">2</span>
+                  <i class="fas fa-list-ul operation__steps--icon"></i>
+                  Composez votre menu
+               </button>
+               <button class="btn_fctnt cursor">
+                  <span class="btn_fctnt__numero">3</span>
+                  <i class="fas fa-store operation__steps--icon"></i>
+                  Dégustez au restaurant
+               </button>
+            </div>
+         </section>
+         <!--  Liste restaurants -->
+         <section class="resto">
+            <h2>Restaurants</h2>
+            <div class="liste_resto">
+               <!-- Palette des gouts -->
+               <a class="card-resto" href="palettedugout.html">
+                  <div class="card-resto__new">
+                     <h4>Nouveau</h4>
                   </div>
-                  <i class="fa-regular fa-heart fa-2x coeur"></i>
-               </div>
-            </a>
-            <!-- La note enchantée -->
-            <a class="card-resto" href="lanoteenchantee.html">
-               <div class="card-resto__new">
-                  <h4>Nouveau</h4>
-               </div>
-               <div class="card-image">
-                  <img class="object-fit-norm" src="public/images/restaurants/note_enchantee.jpg"
-                     alt="la_note_enchantee">
-               </div>
-               <div class="bloc-nom">
-                  <div class="bloc-nom__texte">
-                     <h4>La note enchantée </h4>
-                     Charonne
+                  <div class="card-image">
+                     <img class="object-fit-norm" src="public/images/restaurants/palette_du_gout.jpg"
+                        alt="palette_du_gout">
                   </div>
-                  <i class="fa-regular fa-heart fa-2x coeur"></i>
-               </div>
-            </a>
-            <!-- à la française-->
-            <a class="card-resto" href="alafrancaise.html">
-               <div class="card-image">
-                  <img class="object-fit-norm" src="public/images/restaurants/a_la_francaise.jpg" alt="a_la_francaise">
-               </div>
-               <div class="bloc-nom">
-                  <div class="bloc-nom__texte">
-                     <h4>À la française </h4>
-                     Cité Rouge
+                  <div class="bloc-nom">
+                     <div class="bloc-nom__texte">
+                        <h4>La palette du goût </h4>
+                        Ménilmontant
+                     </div>
+                     <i class="fa-regular fa-heart fa-2x coeur"></i>
                   </div>
-                  <i class="fa-regular fa-heart fa-2x coeur"></i>
-               </div>
-            </a>
-            <!-- Le délice des sens-->
-            <a class="card-resto" href="ledelicedessens.html">
-               <div class="card-image">
-                  <img class="object-fit-norm" src="public/images/restaurants/delice_des_sens.jpg"
-                     alt="delice_des_sens">
-               </div>
-               <div class="bloc-nom">
-                  <div class="bloc-nom__texte">
-                     <h4>Le délice des sens </h4>
-                     Folie-Méricourt
+               </a>
+               <!-- La note enchantée -->
+               <a class="card-resto" href="lanoteenchantee.html">
+                  <div class="card-resto__new">
+                     <h4>Nouveau</h4>
                   </div>
-                  <i class="fa-regular fa-heart fa-2x coeur"></i>
-               </div>
-            </a>
-         </div>
-      </section>
-   </main>
-   <footer>
-      <h2>ohmyfood</h2>
-      <nav>
-         <ul>
-            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-         </ul>
-      </nav>
-   </footer>
-</section>
+                  <div class="card-image">
+                     <img class="object-fit-norm" src="public/images/restaurants/note_enchantee.jpg"
+                        alt="la_note_enchantee">
+                  </div>
+                  <div class="bloc-nom">
+                     <div class="bloc-nom__texte">
+                        <h4>La note enchantée </h4>
+                        Charonne
+                     </div>
+                     <i class="fa-regular fa-heart fa-2x coeur"></i>
+                  </div>
+               </a>
+               <!-- à la française-->
+               <a class="card-resto" href="alafrancaise.html">
+                  <div class="card-image">
+                     <img class="object-fit-norm" src="public/images/restaurants/a_la_francaise.jpg"
+                        alt="a_la_francaise">
+                  </div>
+                  <div class="bloc-nom">
+                     <div class="bloc-nom__texte">
+                        <h4>À la française </h4>
+                        Cité Rouge
+                     </div>
+                     <i class="fa-regular fa-heart fa-2x coeur"></i>
+                  </div>
+               </a>
+               <!-- Le délice des sens-->
+               <a class="card-resto" href="ledelicedessens.html">
+                  <div class="card-image">
+                     <img class="object-fit-norm" src="public/images/restaurants/delice_des_sens.jpg"
+                        alt="delice_des_sens">
+                  </div>
+                  <div class="bloc-nom">
+                     <div class="bloc-nom__texte">
+                        <h4>Le délice des sens </h4>
+                        Folie-Méricourt
+                     </div>
+                     <i class="fa-regular fa-heart fa-2x coeur"></i>
+                  </div>
+               </a>
+            </div>
+         </section>
+      </main>
+      <footer>
+         <h2>ohmyfood</h2>
+         <nav>
+            <ul>
+               <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+               <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+               <li><a href="#">Mentions légales</a></li>
+               <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+            </ul>
+         </nav>
+      </footer>
+   </section>
 </body>
 
 </html>
