ajout mixin checkout

--- a/palettedugout.html
+++ b/palettedugout.html
@@ -43,11 +43,16 @@
          <section class="menu__description">
             <h3 class="menu__description--titre">Entrées</h3>
             <div class="menu__description--bloc_plat">
+               <div class="info">
                <h4>Fricassée d'escargot</h4>
                <div class="menu__description--bloc_plat--details">
                   <p>Au piment d'Espelette</p>
                   <h4>25€</h4>
                </div>
+               </div>
+             <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div> 
             </div>
             <div class="menu__description--bloc_plat">
                <h4>Foie gras de canard mi-cuit</h4>
