--- a/palettedugout.html
+++ b/palettedugout.html
@@ -35,7 +35,7 @@
                <h1>La palette du goût </h1>
             </div>
             <i class="fa-regular fa-heart fa-2x coeur"></i>
-           
+
          </div>
       </section>
       <section class="menu__description--plat">
@@ -44,28 +44,38 @@
             <h3 class="menu__description--titre">Entrées</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
-               <h4>Fricassée d'escargot</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Au piment d'Espelette</p>
-                  <h4>25€</h4>
+                  <h4>Fricassée d'escargot</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Au piment d'Espelette</p>
+                     <h4>25€</h4>
+                  </div>
                </div>
-               </div>
-             <div class="menu__description--bloc_plat--check_status">
+               <div class="menu__description--bloc_plat--check_status">
                   <i class="fa-solid fa-circle-check fa-2x"></i>
-               </div> 
-            </div>
-            <div class="menu__description--bloc_plat">
-               <h4>Foie gras de canard mi-cuit</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Et ses copeaux de truffe noire</p>
-                  <h4>35€</h4>
                </div>
             </div>
             <div class="menu__description--bloc_plat">
-               <h4>Oeuf au plat</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Assaisonné à la truffe sur lit de caviar</p>
-                  <h4>20€</h4>
+               <div class="info">
+                  <h4>Foie gras de canard mi-cuit</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Et ses copeaux de truffe noire</p>
+                     <h4>35€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+            </div>
+            <div class="menu__description--bloc_plat">
+               <div class="info">
+                  <h4>Oeuf au plat</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Assaisonné à la truffe sur lit de caviar</p>
+                     <h4>20€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
          </section>
@@ -73,49 +83,83 @@
          <section class="menu__description">
             <h3 class="menu__description--titre">Plats</h3>
             <div class="menu__description--bloc_plat">
-               <h4>Filet de boeuf aux herbes</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Accompagné de sa ribambelle de légumes</p>
-                  <h4>40€</h4>
+               <div class="info">
+                  <h4>Filet de boeuf aux herbes</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Accompagné de sa ribambelle de légumes</p>
+                     <h4>40€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
             <div class="menu__description--bloc_plat">
-               <h4>Parmentier de queue de boeuf</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>À la truffe noire sur sa purée de panais</p>
-                  <h4>35€</h4>
+               <div class="info">
+                  <h4>Parmentier de queue de boeuf</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>À la truffe noire sur sa purée de panais</p>
+                     <h4>35€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
             <div class="menu__description--bloc_plat">
-               <h4>Filet de turbot</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Aux agrumes</p>
-                  <h4>44€</h4>
+               <div class="info">
+                  <h4>Filet de turbot</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Aux agrumes</p>
+                     <h4>44€</h4>
+                  </div>
                </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
+               </div>
+
             </div>
          </section>
          <!-- desserts -->
          <section class="menu__description">
             <h3 class="menu__description--titre">Desserts</h3>
             <div class="menu__description--bloc_plat">
-               <h4>Paris-Brest</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Revisité</p>
-                  <h4>18€</h4>
+               <div class="info">
+                  <h4>Paris-Brest</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Revisité</p>
+                     <h4>18€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
             <div class="menu__description--bloc_plat">
-               <h4>Macaron au chocolat d'exception </h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Et glace à la vanille de Madagascar</p>
-                  <h4>22€</h4>
+               <div class="info">
+                  <h4>Macaron au chocolat d'exception </h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Et glace à la vanille de Madagascar</p>
+                     <h4>22€</h4>
+                  </div>
+
+
+
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
             <div class="menu__description--bloc_plat">
-               <h4>Mousse au chocolat</h4>
-               <div class="menu__description--bloc_plat--details">
-                  <p>Au piment d'Espelette et à la truffe noire</p>
-                  <h4>23€</h4>
+               <div class="info">
+                  <h4>Mousse au chocolat</h4>
+                  <div class="menu__description--bloc_plat--details">
+                     <p>Au piment d'Espelette et à la truffe noire</p>
+                     <h4>23€</h4>
+                  </div>
+               </div>
+               <div class="menu__description--bloc_plat--check_status">
+                  <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
          </section>
