modif animation check

--- a/palettedugout.html
+++ b/palettedugout.html
@@ -44,10 +44,12 @@
             <h3 class="menu__description--titre">Entrées</h3>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Fricassée d'escargot</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Au piment d'Espelette</p>
-                     <h4>25€</h4>
+                  <p class="produit">Au piment d'Espelette</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>25€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -56,10 +58,12 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Foie gras de canard mi-cuit</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Et ses copeaux de truffe noire</p>
-                     <h4>35€</h4>
+                  <p class="produit">Et ses copeaux de truffe noire</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>35€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
@@ -68,16 +72,20 @@
             </div>
             <div class="menu__description--bloc_plat">
                <div class="info">
+               <div class="info--titre-plat">
                   <h4>Oeuf au plat</h4>
-                  <div class="menu__description--bloc_plat--details">
-                     <p>Assaisonné à la truffe sur lit de caviar</p>
-                     <h4>20€</h4>
+                  <p class="produit">Assaisonné à la truffe sur lit de caviar</p>
+               </div>
+                  <div class="info--prix">
+                    <h4>20€</h4>
                   </div>
                </div>
                <div class="menu__description--bloc_plat--check_status">
                   <i class="fa-solid fa-circle-check fa-2x"></i>
                </div>
             </div>
+               
+        
          </section>
          <!-- Plats -->
          <section class="menu__description">
